shop and blog section ok on lg screen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
       <%= render "shared/navbar_mobile" unless @disable_nav %>
     <% end %>
     <%= yield %>
-    <%= render "shared/footer" %>
+    <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') %>
+      <%= render "shared/footer" unless @disable_footer %>
+    <% end %>
   </body>
 </html>
