--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <header class="h-screen">
   <div class="h-9/10 bg-cover bg-center text-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
     <div class="pt-32 px-2">
-      <h1 class="text-white text-3xl font-semibold tracking-tight">Objets en céramique fait mains</h1>
+      <h1 class="text-white text-3xl font-semibold tracking-tight lg:text-4xl">Objets en céramique fait mains</h1>
     </div>
     <div class="pt-32">
       <%= link_to items_path do %>
@@ -20,13 +20,13 @@
 <main>
 
   <!-- first section with shop category buttons and last articles -->
-  <section data-controller="category-buttons" class="pt-4 pb-12">
+  <section data-controller="category-buttons" class="pt-4 pb-12 lg:pb-24">
     <div class="px-4">
-      <h2 class="text-center text-2xl font-bold tracking-tight">Les dernières créations de mon atelier</h2>
+      <h2 class="text-center text-2xl font-bold tracking-tight lg:text-3xl lg:pt-6">Les dernières créations de mon atelier</h2>
     </div>
 
     <!--   category buttons link_to section -->
-    <div class="px-4 pt-8">
+    <div class="px-4 pt-8 max-w-sm mx-auto lg:pt-16">
 
      <!--  buttons visible at all times -->
       <div class="flex flex-wrap gap-x-2 gap-y-4 justify-center">
@@ -70,12 +70,12 @@
     </div>
 
     <!-- last articles section -->
-    <div class="py-8 overflow-x-auto scrollbars-hidden">
-      <div class="px-4 inline-flex space-x-2">
-        <% @items.first(4).each do |item| %>
+    <div class="py-8 overflow-x-auto scrollbars-hidden lg:pt-12 lg:overflow-x-hidden">
+      <div class="px-4 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-6 lg:px-16">
+        <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
-          <div class="shadow-3xl rounded pb-2 w-60">
-            <div class="relative h-64" style="padding-bottom: 80%">
+          <div class="shadow-3xl rounded pb-2 w-60 lg:w-full">
+            <div class="relative h-64 lg:h-72" style="padding-bottom: 80%">
               <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
             </div>
             <div>
@@ -97,22 +97,22 @@
   </section>
 
 <!--   blog section -->
-  <section class="px-4 py-12 bg-gray-200">
+  <section class="px-4 py-12 bg-gray-200 lg:py-24">
     <div class="flex justify-center">
-      <svg class="w-16 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path d="M24 12.506v26m0-26C21.664 10.954 18.492 10 15 10s-6.664.954-9 2.506v26C8.336 36.954 11.508 36 15 36s6.664.954 9 2.506m0-26C26.336 10.954 29.508 10 33 10c3.494 0 6.664.954 9 2.506v26C39.664 36.954 36.494 36 33 36c-3.492 0-6.664.954-9 2.506" stroke="#D97862" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <svg class="w-16 h-16 lg:w-24 lg:h-24" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path d="M24 12.506v26m0-26C21.664 10.954 18.492 10 15 10s-6.664.954-9 2.506v26C8.336 36.954 11.508 36 15 36s6.664.954 9 2.506m0-26C26.336 10.954 29.508 10 33 10c3.494 0 6.664.954 9 2.506v26C39.664 36.954 36.494 36 33 36c-3.492 0-6.664.954-9 2.506" stroke="#D97862" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
     </div>
 
-    <div class="pt-4">
-      <h2 class="text-center text-2xl font-bold tracking-tight">Vous voulez en apprendre plus sur la céramique ?</h2>
+    <div class="pt-4 lg:pt-8">
+      <h2 class="text-center text-2xl font-bold tracking-tight lg:text-3xl">Vous voulez en apprendre plus sur la céramique ?</h2>
     </div>
 
 
 
 <!--     grid des articles(3 pour l'instant) -->
-    <div class="pt-8 grid grid-cols-2 gap-2">
+    <div class="pt-8 grid grid-cols-2 gap-2 max-w-xl mx-auto lg:pt-0 lg:grid-cols-4 lg:max-w-4xl">
 
 <!--       premier article le plus récent en gros -->
-      <div class="col-span-2 bg-white overflow-hidden shadow-2xl rounded">
+      <div class="col-span-2 bg-white overflow-hidden shadow-2xl rounded lg:order-2 lg:my-12">
         <div class="relative" style="padding-bottom: 85%;">
           <span> <%= cl_image_tag Article.last.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
         </div>
@@ -134,25 +134,43 @@
       </div>
 
 <!-- deux autres article les plus récent après celui au dessus en petit en dessous -->
-      <% @articles[1..2].each do |article| %>
-      <div class="bg-white overflow-hidden shadow-2xl rounded">
+
+
+      <div class="bg-white overflow-hidden shadow-2xl rounded lg:order-1 lg:my-48">
         <div class="relative " style="padding-bottom: 80%;">
-          <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
+          <span> <%= cl_image_tag @articles[1].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
         </div>
         <div class="flex flex-col px-2 h-36">
           <div class="pt-2">
-            <span class="text-japonica-500 font-medium text-sm"> <%= article.category %> </span>
+            <span class="text-japonica-500 font-medium text-sm"> <%= @articles[1].category %> </span>
           </div>
           <div class="flex-grow">
-            <span class="font-bold text-base tracking-tight "><%= article.title %></span>
+            <span class="font-bold text-base tracking-tight "><%= @articles[1].title %></span>
           </div>
           <div class="pb-2 space-x-2">
-            <span class="text-gray-600 text-xs"><%= (article.created_at).strftime("%b %d, %Y") %></span>
+            <span class="text-gray-600 text-xs"><%= (@articles[1].created_at).strftime("%b %d, %Y") %></span>
             <span class="text-gray-600 text-xs">6 min de lecture</span>
           </div>
         </div>
       </div>
-      <% end %>
+
+      <div class="bg-white overflow-hidden shadow-2xl rounded lg:order-3 lg:my-48">
+        <div class="relative " style="padding-bottom: 80%;">
+          <span> <%= cl_image_tag @articles[2].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
+        </div>
+        <div class="flex flex-col px-2 h-36">
+          <div class="pt-2">
+            <span class="text-japonica-500 font-medium text-sm"> <%= @articles[2].category %> </span>
+          </div>
+          <div class="flex-grow">
+            <span class="font-bold text-base tracking-tight "><%= @articles[2].title %></span>
+          </div>
+          <div class="pb-2 space-x-2">
+            <span class="text-gray-600 text-xs"><%= (@articles[2].created_at).strftime("%b %d, %Y") %></span>
+            <span class="text-gray-600 text-xs">6 min de lecture</span>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -169,7 +187,7 @@
     </div>
 
 <!-- grid des features -->
-    <div class="pt-10 grid grid-cols-2 gap-y-6 gap-x-8">
+    <div class="pt-10 grid grid-cols-2 gap-y-6 gap-x-8 max-w-xl mx-auto">
       <div class="flex flex-col items-center">
         <div class="">
           <svg class="w-16 h-16 rounded-lg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#D97862" d="M0 0h48v48H0z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M21.571 11.125c0-.564.256-1.104.712-1.503A2.615 2.615 0 0124 9c.644 0 1.262.224 1.717.622.456.399.712.94.712 1.503v11.688a1 1 0 00.355.75c.228.2.537.312.859.312.322 0 .63-.112.858-.311a1 1 0 00.356-.752V13.25c0-.564.256-1.104.712-1.503a2.615 2.615 0 011.717-.622c.644 0 1.261.224 1.717.622.455.399.711.94.711 1.503v9.563a1 1 0 00.356.75c.228.2.536.312.859.312.322 0 .63-.112.858-.311a1 1 0 00.356-.752V17.5c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.717-.622c.645 0 1.262.224 1.718.622.455.399.711.94.711 1.503v10.625c0 1.953-.44 3.888-1.294 5.692-.854 1.805-2.107 3.445-3.685 4.826-1.579 1.382-3.453 2.477-5.515 3.225A19.129 19.129 0 0124 43c-2.233 0-4.443-.385-6.506-1.132-2.062-.748-3.936-1.843-5.515-3.225-1.578-1.381-2.83-3.02-3.685-4.826A13.278 13.278 0 017 28.125v-4.25c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.718-.622c.644 0 1.261.224 1.717.622.455.399.711.94.711 1.503v5.313a1 1 0 00.356.75c.228.2.536.312.858.312.322 0 .631-.112.86-.311a1 1 0 00.355-.752V13.25c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.717-.622c.644 0 1.262.224 1.718.622.455.399.71.94.71 1.503v9.563a1 1 0 00.357.75c.227.2.536.312.858.312.322 0 .631-.112.859-.311a1 1 0 00.355-.752V11.126z" fill="#fff"/></svg>        </div>
