--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="px-4 pt-6 bg-gray-100">
+<footer class="px-4 pt-6 bg-gray-100 md:px-8">
   <div class="">
     <%= image_tag "Logo_footer.png", class:'rounded-full w-12 h-12' %>
   </div>
