responsive home all ok

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,6 +12,7 @@
 
 .instagram-media {
   min-width: 240px !important;
+  width: 100% !important;
   margin-top:0 !important;
   margin-bottom: 12px !important;
   margin-left:auto !important;
