--- a/app/views/shared/_sticky_logo.html.erb
+++ b/app/views/shared/_sticky_logo.html.erb
@@ -1,7 +1,7 @@
 <div data-controller="stickylogo" data-action="scroll@window->stickylogo#onScroll">
-  <div data-stickylogo-target="stickylogo" class="hidden sticky px-2 top-0 z-40">
+  <div data-stickylogo-target="stickylogo" class="hidden lg:block sticky px-2 top-0 z-40 ">
     <%= link_to root_path do %>
-      <%= image_tag "Logo_sticky.png", class:'h-12' %>
+      <%= image_tag "Logo_sticky.png", class:'h-12 w-12 xl:h-16 xl:w-16' %>
     <% end %>
   </div>
 
