--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,34 +31,34 @@
      <!--  buttons visible at all times -->
       <div class="flex flex-wrap gap-x-2 gap-y-4 justify-center">
         <%= link_to items_path(category: "Aquarium"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Aquarium</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Aquarium</button>
         <% end %>
 
         <%= link_to items_path(category: "Décoration"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Décoration</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Décoration</button>
         <% end %>
 
         <%= link_to items_path(category: "Cuisine"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Cuisine</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Cuisine</button>
         <% end %>
 
         <%= link_to items_path(category: "Sculptures"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Sculptures</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Sculptures</button>
         <% end %>
 
         <%= link_to items_path(category: "Photophores"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Photophores</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Photophores</button>
         <% end %>
       </div>
 
       <!-- buttons visible when "see more" is on -->
       <div data-category-buttons-target="toggleable" class="hidden pt-4 flex flex-wrap gap-x-2 gap-y-4 justify-center">
         <%= link_to items_path(category: "Pots, coupes"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Pots, coupes</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Pots, coupes</button>
         <% end %>
 
         <%= link_to items_path(category: "Extérieur"), class:'group' do %>
-          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 focus:outline-none">Extérieur</button>
+          <button class="px-2 py-2 text-gray-500 rounded-full shadow-3xl font-bold bg-gray-100 border border-gray-300 hover:bg-white hover:text-japonica-500 focus:outline-none">Extérieur</button>
         <% end %>
       </div>
 
@@ -74,7 +74,7 @@
       <div class="px-4 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-6 lg:px-16 xl:px-0.5">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
-          <div class="shadow-3xl rounded pb-2 w-60 lg:w-full">
+          <div class="shadow-3xl rounded pb-2 w-60 lg:w-full hover:opacity-80 focus:outline-none">
             <div class="relative h-64 lg:h-72 xl:h-60" style="padding-bottom: 80%">
               <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
             </div>
