--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,3 +18,10 @@
   margin-left:auto !important;
   margin-right:auto !important;
 }
+
+// .shop-cards {
+//   &:hover {
+//     transition: all 0.2s ease-out;
+//     top: -2px;
+//   }
+// }
