--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <body>
 
     <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') %>
-      <%= render "shared/navbar_mobile" unless @disable_nav %>
+      <%= render "shared/navbar" unless @disable_nav %>
     <% end %>
     <%= yield %>
     <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') %>
