--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,57 +1,62 @@
 
 
 
-<div class="py-10">
-  <h2 class="text-3xl font-bold text-left px-2 text-gray-800">Mes créations du moment</h2>
+<div class="py-10 lg:py-20 max-w-6xl mx-auto">
+  <div class="px-2 md:px-4">
+    <h2 class="text-3xl font-bold text-left text-gray-900 lg:text-4xl">Mes créations du moment</h2>
+  </div>
 
-  <%= form_tag items_path, class:'flex items-center border-b-2 border-gray-200 mx-2', method: :get do %>
-    <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
-    <%= text_field_tag :query,
-      params[:query],
-      placeholder: "Chercher un article(nom, catégories, matériaux..)", class:'mx-2 text-sm py-4 focus:outline-none w-full'
-    %>
-    <%= submit_tag "Search", class:'hidden'%>
+  <div class="mx-2 md:mx-4 lg:pt-2">
+    <%= form_tag items_path, class:'flex items-center border-b-2 border-gray-200', method: :get do %>
 
-  <% end %>
+      <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
+      <%= text_field_tag :query,
+        params[:query],
+        placeholder: "Chercher par nom, catégories, matériaux..", class:'mx-2 text-base py-4 focus:outline-none w-full tracking-tighter'
+      %>
+      <%= submit_tag "Search", class:'hidden'%>
+
+    <% end %>
+  </div>
 
 
-  <div class="overflow-x-auto scrollbars-hidden py-4 mt-3 ml-2 bg-gray-300">
-    <div class="px-4 inline-flex space-x-6 items-center text-center">
+  <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
+    <div class="px-4 inline-flex items-center text-center">
 
-      <div class="<%= params[:category] == nil ? ' font-bold text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == nil ? 'font-bold text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-2' %>">
         <%= link_to 'Tout voir', items_path %>
       </div>
 
-      <div class="<%= params[:category] == 'Aquarium' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Aquarium' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-3' %>">
         <%= link_to 'Aquarium', items_path(category: 'Aquarium') %>
       </div>
 
-      <div class="<%= params[:category] == 'Photophores' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Photophores' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-4' %>">
         <%= link_to 'Photophores', items_path(category: 'Photophores') %>
       </div>
 
-      <div class="<%= params[:category] == 'Sculptures' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Sculptures' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-5' %>">
         <%= link_to 'Sculptures', items_path(category: 'Sculptures') %>
       </div>
 
-      <div class="<%= params[:category] == 'Pots, coupes' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Pots, coupes' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-6' %>">
         <%= link_to 'Pots, coupes', items_path(category: 'Pots, coupes') %>
       </div>
 
-      <div class="<%= params[:category] == 'Cuisine' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Cuisine' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-7' %>">
         <%= link_to 'Cuisine', items_path(category: 'Cuisine') %>
       </div>
 
-      <div class="<%= params[:category] == 'Décoration' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Décoration' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-8' %>">
         <%= link_to 'Décoration', items_path(category: 'Décoration') %>
       </div>
 
-      <div class="<%= params[:category] == 'Extérieur' ? 'font-bold  text-japonica-500 whitespace-nowrap' : ' font-medium text-gray-600 whitespace-nowrap' %>">
+      <div class="<%= params[:category] == 'Extérieur' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-9' %>">
         <%= link_to 'Extérieur', items_path(category: 'Extérieur') %>
       </div>
     </div>
   </div>
-  <div class="pt-4 grid grid-cols-2 gap-2 px-2">
+  <div class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
     <% @items.each do |item| %>
       <%= link_to item_path(item), class:"group" do %>
       <div class="shadow-3xl rounded pb-2">
