--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,5 @@
+
+<!-- Navbar sur mobile avec hamburger menu -->
 <nav data-controller="menu" class="lg:hidden">
   <div class="flex items-center justify-between py-2 px-2 shadow">
 
@@ -30,9 +32,11 @@
   </div>
 </nav>
 
+
+<!-- Navbar sur desktop -->
 <nav class="hidden lg:contents">
 
-  <div class="flex justify-between items-center py-3 px-4 shadow">
+  <div class="flex justify-between items-center py-3 px-4 shadow 2xl:pl-72 2xl:pr-96">
     <div class="flex items-baseline space-x-8 xl:space-x-14">
       <div>
         <%= link_to root_path do %>
