--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,32 @@
 <div class="px-4">
 
-  <div class="px-2 pt-6">
-    <%= link_to root_path do %>
-    <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
-    <% end %>
+  <div class="px-6 pt-8 flex items-start justify-between">
+    <div>
+      <%= link_to root_path do %>
+      <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+      <% end %>
+    </div>
+
+    <div>
+      <%= image_tag 'Logo.png', alt:'logo', class:'w-14 h-14 rounded-full' %>
+    </div>
+
+
+ <!--    bricolage pour avoir le logo parfaitement centré -->
+    <div class="invisible">
+      <div class="">
+        <%= link_to root_path do %>
+        <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+        <% end %>
+      </div>
+    </div>
   </div>
 
-  <div class="pt-2 flex justify-center">
-    <%= image_tag 'Logo.png', alt:'logo', class:'w-16 h-16 rounded-full' %>
-  </div>
 
-  <div class="pt-4">
 
-    <h1 class="px-8 text-center text-3xl font-medium">Enregistre ton compte</h1>
+    <h1 class="px-8 text-center text-2xl font-medium">Je crée mon compte</h1>
 
-    <div class="py-6 text-center">
+    <div class="py-6 text-center max-w-xs mx-auto">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
 
@@ -24,13 +36,13 @@
                         required: false,
                         label: false,
                         placeholder: 'Prénom*',
-                        input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: " text-sm text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :last_name,
                         required: false,
                         label: false,
                         placeholder: 'Nom*',
-                        input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :email,
                         required: false,
@@ -38,23 +50,23 @@
                         input_html: { autocomplete: "email" },
                         label: false,
                         placeholder: 'Email*',
-                        input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :password,
                         required: false,
                         input_html: { autocomplete: "current-password" },
                         label: false,
                         placeholder: 'Mot de passe*',
-                        input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :password_confirmation,
                         required: true,
                         input_html: { autocomplete: "new-password" },
                         placeholder: 'Mot de passe confirmation*',
                         label: false,
-                        input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
 
-          <div class="pt-4 flex items-center">
+          <div class="pt-2 flex items-center">
             <div class="mr-5 bg-gray-100 rounded-full h-12 overflow-hidden">
               <svg class="w-12 h-12 text-gray-300" fill="currentColor" viewBox="0 0 24 24"><path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
             </div>
@@ -68,23 +80,20 @@
           </div>
         </div>
 
-        <div class="form-actions pt-8">
-          <%= f.button :submit, "Crée ton compte", class:"w-full py-4 rounded-xl bg-black text-white font-bold text-lg" %>
+        <div class="form-actions pt-6">
+          <%= f.button :submit, "Valider", class:"w-full py-4 rounded-xl bg-black text-white font-bold text-lg" %>
         </div>
 
       <% end %>
       <%#= render "devise/shared/links" %>
-
+      <div class="flex justify-between items-center">
+        <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+        <span class="text-sm text-center">Déjà inscris ?</span>
+        <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+      </div>
+      <div class="flex justify-center pb-12">
+        <%= link_to  new_user_session_path do %>
+          <button class="px-6 py-4 rounded-xl text-gray-400 border-2 border-gray-200 font-medium hover:bg-gray-50 hover:text-japonica-500">Se connecter</button>
+        <% end %>
+      </div>
     </div>
-  </div>
-  <div class="flex justify-between items-center">
-    <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
-    <span class="text-sm text-center">Déjà inscris ?</span>
-    <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
-  </div>
-  <div class="flex justify-center pb-12">
-    <%= link_to  new_user_session_path do %>
-      <button class="px-6 py-4 rounded-xl text-gray-400 border-2 border-gray-200 font-medium hover:bg-gray-50 hover:text-japonica-500">Se connecter</button>
-    <% end %>
-  </div>
-</div>
