--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <!-- header with background and CTA-->
 
 <header class="h-screen">
-  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-9/10 lg:h-full" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-9/10 lg:h-full max-w-6xl mx-auto" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
     <div class="px-2 text-center md:px-8 max-w-sm lg:max-w-md xl:max-w-lg 2xl:max-w-xl">
       <h1 class="text-white font-semibold tracking-tight text-3xl lg:text-4xl xl:text-5xl">Objets en céramique fait mains</h1>
     </div>
@@ -20,7 +20,7 @@
 <main>
 
   <!-- first section with shop category buttons and last articles -->
-  <section data-controller="category-buttons" class="pt-4 pb-12 lg:pb-12 2xl:pt-0 max-w-6xl mx-auto ">
+  <section data-controller="category-buttons" class="pt-4 pb-12 lg:pb-12 2xl:pt-0 max-w-6xl mx-auto">
     <div class="px-4">
       <h2 class="text-center text-2xl font-bold tracking-tight lg:text-3xl lg:pt-12 xl:text-4xl">Les dernières créations de mon atelier</h2>
     </div>
