--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 
 <header class="h-screen">
   <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-9/10 lg:h-full max-w-6xl mx-auto" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
-    <div class="px-2 text-center md:px-8 max-w-sm lg:max-w-md xl:max-w-lg 2xl:max-w-xl">
+    <div class="px-2 text-center md:px-8 max-w-sm lg:px-0 lg:max-w-md xl:max-w-lg 2xl:max-w-xl">
       <h1 class="text-white font-semibold tracking-tight text-3xl lg:text-4xl xl:text-5xl">Objets en céramiques fait main</h1>
     </div>
     <div>
