--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,79 +1,109 @@
 
+<div data-controller="item-categories">
 
 
-<div class="py-10 lg:py-20 max-w-6xl mx-auto">
-  <div class="px-2 md:px-4">
-    <h2 class="text-3xl font-bold text-left text-gray-900 lg:text-4xl">Mes créations du moment</h2>
-  </div>
+  <div class="py-10 lg:py-20 max-w-6xl mx-auto">
+    <div class="px-2 md:px-4">
+      <h2 class="text-3xl font-bold text-left text-gray-900 lg:text-4xl">Mes créations du moment</h2>
+    </div>
 
-  <div class="mx-2 md:mx-4 lg:pt-2">
-    <%= form_tag items_path, class:'flex items-center border-b-2 border-gray-200', method: :get do %>
+    <div class="mx-2 md:mx-4 lg:pt-2">
+      <%= form_tag items_path, class:'flex items-center border-b-2 border-gray-200', method: :get do %>
 
-      <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
-      <%= text_field_tag :query,
-        params[:query],
-        placeholder: "Chercher par nom, catégories, matériaux..", class:'mx-2 text-base py-4 focus:outline-none w-full tracking-tighter'
-      %>
-      <%= submit_tag "Search", class:'hidden'%>
+        <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
+        <%= text_field_tag :query,
+          params[:query],
+          placeholder: "Chercher par nom, catégories, matériaux..", class:'mx-2 text-base py-4 focus:outline-none w-full tracking-tighter'
+        %>
+        <%= submit_tag "Search", class:'hidden'%>
 
-    <% end %>
-  </div>
+      <% end %>
+    </div>
 
+    <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
+      <div class="px-4 inline-flex items-center text-center">
 
-  <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
-    <div class="px-4 inline-flex items-center text-center">
+        <div class="<%= params[:category] == nil ? 'font-bold text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-2' %>">
+          <%= link_to 'Tout voir', items_path %>
+        </div>
 
-      <div class="<%= params[:category] == nil ? 'font-bold text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-2' %>">
-        <%= link_to 'Tout voir', items_path %>
-      </div>
+        <div class="<%= params[:category] == 'Aquarium' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-3' %>">
+          <%= link_to 'Aquarium', items_path(category: 'Aquarium') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Aquarium' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-3' %>">
-        <%= link_to 'Aquarium', items_path(category: 'Aquarium') %>
-      </div>
+        <div class="<%= params[:category] == 'Photophores' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-4' %>">
+          <%= link_to 'Photophores', items_path(category: 'Photophores') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Photophores' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-4' %>">
-        <%= link_to 'Photophores', items_path(category: 'Photophores') %>
-      </div>
+        <div class="<%= params[:category] == 'Sculptures' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-5' %>">
+          <%= link_to 'Sculptures', items_path(category: 'Sculptures') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Sculptures' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-5' %>">
-        <%= link_to 'Sculptures', items_path(category: 'Sculptures') %>
-      </div>
+        <div class="<%= params[:category] == 'Pots, coupes' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-6' %>">
+          <%= link_to 'Pots, coupes', items_path(category: 'Pots, coupes') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Pots, coupes' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-6' %>">
-        <%= link_to 'Pots, coupes', items_path(category: 'Pots, coupes') %>
-      </div>
+        <div class="<%= params[:category] == 'Cuisine' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-7' %>">
+          <%= link_to 'Cuisine', items_path(category: 'Cuisine') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Cuisine' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-7' %>">
-        <%= link_to 'Cuisine', items_path(category: 'Cuisine') %>
-      </div>
+        <div class="<%= params[:category] == 'Décoration' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-8' %>">
+          <%= link_to 'Décoration', items_path(category: 'Décoration') %>
+        </div>
 
-      <div class="<%= params[:category] == 'Décoration' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-8' %>">
-        <%= link_to 'Décoration', items_path(category: 'Décoration') %>
-      </div>
-
-      <div class="<%= params[:category] == 'Extérieur' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-9' %>">
-        <%= link_to 'Extérieur', items_path(category: 'Extérieur') %>
+        <div class="<%= params[:category] == 'Extérieur' ? 'font-bold  text-japonica-500 whitespace-nowrap order-1 mx-4' : 'mx-4 font-medium text-gray-600 whitespace-nowrap order-9' %>">
+          <%= link_to 'Extérieur', items_path(category: 'Extérieur') %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
-    <% @items.each do |item| %>
-      <%= link_to item_path(item), class:"group" do %>
-      <div class="shadow-3xl rounded pb-2">
-        <div class="relative" style="padding-bottom: 80%">
-          <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
+
+    <button data-action="click->item-categories#display" data-item-categories-target="category" id="Aquarium" class="toto">Aquarium</button>
+
+    <div data-item-categories-target="cards" class="hidden px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+      <% @items.where(category: "Aquarium").each do |item| %>
+        <%= link_to item_path(item), class:"group" do %>
+        <div class="shadow-3xl rounded pb-2">
+          <div class="relative" style="padding-bottom: 80%">
+            <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
+          </div>
+          <div class="px-2 pt-2">
+            <div class="truncate "><%= item.title %></div>
+          </div>
+          <div class="px-2">
+            <span class="font-bold"> <%= item.price %>€ </span>
+          </div>
+          <div class="px-2">
+            <span class="rounded-full py-1 px-2 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
+          </div>
         </div>
-        <div class="px-2 pt-2">
-          <div class="truncate "><%= item.title %></div>
-        </div>
-        <div class="px-2">
-          <span class="font-bold"> <%= item.price %>€ </span>
-        </div>
-        <div class="px-2">
-          <span class="rounded-full py-1 px-2 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
-        </div>
-      </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+
+    <div class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+      <% @items.each do |item| %>
+        <%= link_to item_path(item), class:"group" do %>
+        <div class="shadow-3xl rounded pb-2">
+          <div class="relative" style="padding-bottom: 80%">
+            <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
+          </div>
+          <div class="px-2 pt-2">
+            <div class="truncate "><%= item.title %></div>
+          </div>
+          <div class="px-2">
+            <span class="font-bold"> <%= item.price %>€ </span>
+          </div>
+          <div class="px-2">
+            <span class="rounded-full py-1 px-2 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
+          </div>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
+
+    <%= link_to "Next page", items_path(page: @page + 1) %>
+    <%= link_to "Last Page", items_path(page: @page - 1) %>
+
   </div>
 </div>
+
