--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -20,22 +20,41 @@
       <% end %>
     </div>
 
-
-
     <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
       <div class="px-4 inline-flex items-center text-center space-x-4">
 
-        <button data-action="click->item-categories#displayToutVoir" data-item-categories-target="ToutVoirButton" class="text-japonica-500 font-bold whitespace-nowrap focus:outline-none">Tout voir</button>
+        <button data-action="click->item-categories#displayAll" data-item-categories-target="toutVoirButton" class="text-japonica-500 font-bold whitespace-nowrap focus:outline-none">Tout voir</button>
         <% categories = ["Aquarium", "Photophores", "Sculptures", "Pots, coupes", "Cuisine", "Décoration", "Extérieur"] %>
         <% categories.each do |category| %>
-          <button data-action="click->item-categories#display<%= category %>" data-item-categories-target="<%= category %>Button" class="font-medium text-gray-600 whitespace-nowrap focus:outline-none"> <%= category %> </button>
+          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="button" class="font-medium text-gray-600 whitespace-nowrap focus:outline-none"> <%= category %> </button>
         <% end %>
 
       </div>
     </div>
 
+    <div data-item-categories-target="toutVoir" class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+      <% @items.each do |item| %>
+        <%= link_to item_path(item), class:"group" do %>
+        <div class="shadow-3xl rounded pb-2">
+          <div class="relative" style="padding-bottom: 80%">
+            <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
+          </div>
+          <div class="px-2 pt-2">
+            <div class="truncate "><%= item.title %></div>
+          </div>
+          <div class="px-2">
+            <span class="font-bold"> <%= item.price %>€ </span>
+          </div>
+          <div class="px-2">
+            <span class="rounded-full py-1 px-2 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
+          </div>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
+
     <% categories.each do |category| %>
-      <div data-item-categories-target="Aquarium" class="hidden px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+      <div data-type="<%= category %>" data-item-categories-target="category" class="hidden px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
         <% @items.where(category: category).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
           <div class="shadow-3xl rounded pb-2">
@@ -58,26 +77,6 @@
     <% end %>
 
 
-    <div data-item-categories-target="ToutVoir" class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
-      <% @items.each do |item| %>
-        <%= link_to item_path(item), class:"group" do %>
-        <div class="shadow-3xl rounded pb-2">
-          <div class="relative" style="padding-bottom: 80%">
-            <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
-          </div>
-          <div class="px-2 pt-2">
-            <div class="truncate "><%= item.title %></div>
-          </div>
-          <div class="px-2">
-            <span class="font-bold"> <%= item.price %>€ </span>
-          </div>
-          <div class="px-2">
-            <span class="rounded-full py-1 px-2 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
-          </div>
-        </div>
-        <% end %>
-      <% end %>
-    </div>
 
     <%= link_to "Next page", items_path(page: @page + 1) %>
     <%= link_to "Last Page", items_path(page: @page > 0 ? @page - 1 : @page) %>
