--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,13 +1,22 @@
 
 <%= render "shared/navbar_light" %>
 
-<div class="px-2 py-4">
+<div class="px-2 py-2 h-screen">
   <div class="flex justify-between">
     <span class="font-bold text-lg"><%= @item.title %></span>
     <span class="text-japonica-500 font-medium"><%= @item.category %></span>
   </div>
-  <div class="pt-2">
-    <%= cl_image_tag @item.photos[0].key, class:'w-full rounded-xl'  %>
+
+  <div class="pt-2 overflow-x-auto scrollbars-hidden h-1/2">
+    <div class="px-2 inline-flex h-full space-x-4">
+      <% @item.photos.each do |photo| %>
+        <div class="w-72">
+          <div class="relative h-full" style="padding-bottom: 80%">
+            <%= cl_image_tag photo.key, class:'absolute h-full w-full inset-0 object-cover shadow rounded-xl'  %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
   <div class="pt-4">
     <span class="font-bold text-2xl"><%= @item.price %>€</span>
@@ -50,7 +59,7 @@
         </div>
 
         <div class="pt-6">
-          <div class="font-semibold">Description</div>
+          <span class="font-semibold">Description</span>
           <div class="pt-2">
             <span><%= @item.description %></span>
           </div>
