about page responsive ok

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,21 @@
-<div class="px-4 py-4">
-  <div class="relative" style="padding-bottom: 80%">
-    <%= image_tag "photo.png", class:"rounded-lg h-full w-full inset-0 absolute object-cover object-center" %>
+<div class="lg:h-screen">
+  <div class="px-4 py-4 lg:max-w-6xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
+
+    <!-- photo on mobile -->
+    <div class="relative lg:hidden" style="padding-bottom: 80%">
+      <%= image_tag "photo.png", class:"rounded h-full w-full inset-0 absolute object-cover" %>
+    </div>
+
+<!--     photo on desktop -->
+    <div class="hidden relative lg:w-1/2 lg:flex">
+      <%= image_tag "photo.png", class:"rounded h-full w-full inset-0 absolute object-cover" %>
+    </div>
+    <div class="flex flex-col pt-4 lg:w-1/2">
+      <span class="text-japonica-500 font-medium">Artiste</span>
+      <span class="font-bold text-xl pt-2">Mélina</span>
+      <p class="pt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque rem, perspiciatis fugiat. Atque assumenda obcaecati odio mollitia dolorum optio officia cum, aliquid ratione, ullam, sunt amet libero in. Placeat, officiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum ullam, voluptatum laboriosam ipsa odio rerum fugit! Magnam sapiente iste culpa explicabo, quam possimus nulla quaerat expedita non eaque eius reiciendis. Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Vel accusantium aliquam, cumque fugiat ducimus magnam architecto vero ipsam perspiciatis, dolore aspernatur recusandae officiis quod incidunt corrupti pariatur mollitia, eum delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam illo quis repellendus cum optio assumenda non libero maiores, placeat! Nostrum eius eveniet maxime, optio facere architecto labore in impedit?</p>
+    </div>
   </div>
-  <div class="flex flex-col pt-4">
-    <span class="text-japonica-500 font-medium">Artiste</span>
-    <span class="font-bold text-xl pt-2">Mélina</span>
-    <p class="pt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque rem, perspiciatis fugiat. Atque assumenda obcaecati odio mollitia dolorum optio officia cum, aliquid ratione, ullam, sunt amet libero in. Placeat, officiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum ullam, voluptatum laboriosam ipsa odio rerum fugit! Magnam sapiente iste culpa explicabo, quam possimus nulla quaerat expedita non eaque eius reiciendis. Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Vel accusantium aliquam, cumque fugiat ducimus magnam architecto vero ipsam perspiciatis, dolore aspernatur recusandae officiis quod incidunt corrupti pariatur mollitia, eum delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam illo quis repellendus cum optio assumenda non libero maiores, placeat! Nostrum eius eveniet maxime, optio facere architecto labore in impedit?</p>
-  </div>
+
 </div>
+
