fix link to category from landing page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,10 +23,10 @@
     <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
       <div class="px-4 inline-flex items-center text-center space-x-4">
 
-        <button data-action="click->item-categories#displayAll" data-item-categories-target="toutVoirButton" class="text-japonica-500 font-bold whitespace-nowrap focus:outline-none">Tout voir</button>
+        <button data-action="click->item-categories#displayAll" data-item-categories-target="toutVoirButton" class=" <%= params[:category] == nil ? "text-japonica-500 font-bold whitespace-nowrap focus:outline-none" : "font-medium text-gray-600 whitespace-nowrap focus:outline-none" %> ">Tout voir</button>
         <% categories = ["Aquarium", "Photophores", "Sculptures", "Pots, coupes", "Cuisine", "Décoration", "Extérieur"] %>
         <% categories.each do |category| %>
-          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="button" class="font-medium text-gray-600 whitespace-nowrap focus:outline-none"> <%= category %> </button>
+          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="button" class="<%= params[:category] == category ? "text-japonica-500 font-bold whitespace-nowrap focus:outline-none" : "font-medium text-gray-600 whitespace-nowrap focus:outline-none" %>"> <%= category %> </button>
         <% end %>
 
       </div>
